@@ -1,3 +1,8 @@
+2007-08-02	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>
+	* ica/resources/it.ts:
+	* lib/resources/it.ts:
+	updated Italian localization
+
 2007-07-30	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* ica/win32/src/VNCHooks/SharedData.cpp:
